<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Catalogue Movie</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="action_search">action_search</string>
    <string name="release_date">Release date :</string>
    <string name="search_result">Search for title :</string>
    <string name="search_hint">Search movies by title</string>
    <string name="change_language_settings">Change language settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="favorite">Favorite</string>
    <string name="preferences">Preferences</string>
    <string name="setting">Setting</string>
    <string name="language_setting">Language Setting</string>
    <string name="bahasa_indonesia">Bahasa Indonesia</string>
    <string name="english">English</string>
    <string name="change_language">Change language</string>
    <string name="appwidget_text">CATALOGUE MOVIE FAVORITE</string>
    <string name="empty_text">NO DATA</string>
    <string name="add_widget">Add widget</string>
    <string name="content_title">Content title</string>
    <string name="content_text">Content text</string>
    <string name="subtext">Sub text</string>
    <string name="send_notif">Send Notif</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="release_today_reminder">Release Today Reminder</string>
</resources>
