<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/round_home_black_24"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/round_search_black_24"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/round_star_rate_black_24"
            android:title="@string/favorite" />
    </group>

    <item android:title="@string/preferences">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/round_settings_black_24"
                android:title="@string/setting" />
        </menu>
    </item>

</menu>
