<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SettingActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/language_setting"
        android:textSize="16sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <RadioButton
            android:id="@+id/indonesia_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/bahasa_indonesia" />

        <RadioButton
            android:id="@+id/english_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/english" />
    </RadioGroup>

    <Button
        android:id="@+id/language_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:onClick="onClickButtonLanguage"
        android:text="@string/change_language" />

    <CheckBox
        android:id="@+id/checkbox_daily"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:onClick="onCheckboxClicked"
        android:text="@string/daily_reminder" />

    <CheckBox
        android:id="@+id/checkbox_release_today"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:onClick="onCheckboxClicked"
        android:text="@string/release_today_reminder" />

</LinearLayout>